--- a/spring-boot-stater-xxl-job/build.gradle
+++ b/spring-boot-stater-xxl-job/build.gradle
@@ -1,5 +1,5 @@
 dependencies {
-    api "com.xuxueli:xxl-job-core:2.3.1"
+    implementation "com.xuxueli:xxl-job-core:2.3.1"
     compileOnly "org.springframework.boot:spring-boot-autoconfigure"
     annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
 }
